<resources>
    <string name="app_name" translatable="false">au547352 Word Learner 2</string>
    <string name="my_words">My Words:</string>
    <string name="Exit">Exit</string>
    <string name="wordImage">Image of word:</string>
    <string name="wordName">Name of word:</string>
    <string name="Pronunciation">Pronunciation</string>
    <string name="wordPronunciation">Pronunciation of word:</string>
    <string name="TVUserRating" translatable="false">0.0</string>
    <string name="wordDescription">Description:</string>
    <string name="notes">Notes:</string>
    <string name="cancel">Cancel</string>
    <string name="edit">Edit</string>
    <string name="wordRating">Word Rating:</string>
    <string name="insertNotes">Insert notes here</string>
    <string name="ok" translatable="false">OK</string>
    <string name="search">Search:</string>
    <string name="add">Add new</string>
    <string name="searchbar">Search here…</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="word_exists">Word already exists...</string>
    <string name="response_error">Response Error</string>
    <string name="word_added">New word added to collection</string>
    <string name="service_connected">Service is connected</string>
    <string name="service_disconnected">Service Disconnected</string>
    <string name="check_word">"Check out this word: "</string>
</resources>
