<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/TVWordLabel_main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/my_words"
        android:textColor="@color/colorWhite"
        android:textSize="30sp"
        android:textStyle="normal|bold"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ListView
        android:id="@+id/LVmainActivity_main"
        android:layout_width="0dp"
        android:layout_height="480dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginRight="5dp"
        android:background="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TVWordLabel_main" />

    <TextView
        android:id="@+id/TVsearchLabel_main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="270dp"
        android:layout_marginEnd="270dp"
        android:text="@string/search"
        android:textColor="@color/colorWhite"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/btn_Exit_main"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/LVmainActivity_main" />

    <EditText
        android:id="@+id/ETsearchField_main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints="@string/searchbar"
        android:ems="12"
        android:hint="@string/searchbar"
        android:inputType="textPersonName"
        android:textColor="@color/colorAccent"
        app:layout_constraintBottom_toTopOf="@+id/btn_Add_main"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/TVsearchLabel_main"
        app:layout_constraintTop_toBottomOf="@+id/LVmainActivity_main" />

    <Button
        android:id="@+id/btn_Exit_main"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="200dp"
        android:layout_marginRight="200dp"
        android:layout_marginBottom="30dp"
        android:background="@color/colorAccent"
        android:text="@string/Exit"
        android:textColor="@color/colorBlack"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_Add_main"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="200dp"
        android:layout_marginLeft="200dp"
        android:layout_marginBottom="30dp"
        android:background="@color/colorAccent"
        android:text="@string/add"
        android:textColor="@color/colorBlack"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>